--- a/app/src/main/res/layout/away_team_player_row.xml
+++ b/app/src/main/res/layout/away_team_player_row.xml
@@ -2,28 +2,28 @@
     android:layout_width="match_parent"
     android:layout_height="88dp"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/away_team_ly_padding_b"
+    android:paddingBottom="10dp"
     android:paddingLeft="@dimen/margin_16dp"
     android:paddingRight="@dimen/margin_16dp"
-    android:paddingTop="@dimen/away_team_ly_padding_t">
+    android:paddingTop="10dp">
 
     <ImageView
         android:id="@+id/player_image_iv"
-        android:layout_width="@dimen/player_image_w"
-        android:layout_height="@dimen/player_image_h"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_account_circle_black_36dp"
-        android:tint="@color/status_bar" />
+        android:tint="@color/status_bar"
+        android:src="@drawable/ic_account_circle_black_36dp" />
 
     <TextView
         android:id="@+id/player_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/tv_player_name_margin_l"
-        android:layout_marginTop="@dimen/tv_player_name_margin_t"
-        android:fontFamily="sans-serif"
-        android:textColor="#000"
-        android:textSize="16sp" />
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@string/roboto_regular"
+        android:textColor="@color/dark"
+        android:textSize="@dimen/material_text_subhead"  />
 
     <LinearLayout
         android:id="@+id/player_data_linear_layout"
@@ -39,8 +39,9 @@
                 android:id="@+id/player_hint_year_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/tv_year_margin_l"
+                android:layout_marginLeft="72dp"
                 android:text="@string/birthday"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -50,6 +51,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -59,6 +61,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/player_hint_year_tv"
                 android:layout_toRightOf="@+id/player_hint_year_tv"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
         </RelativeLayout>
     </LinearLayout>
@@ -68,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_below="@id/player_data_linear_layout"
-        android:layout_marginLeft="@dimen/lin_margin_l">
+        android:layout_marginLeft="72dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -79,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nationality"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -88,6 +92,7 @@
                 android:layout_toEndOf="@+id/player_nationality_hint_tv"
                 android:layout_toRightOf="@+id/player_nationality_hint_tv"
                 android:maxLength="11"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -97,8 +102,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:maxLength="11"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
-
         </RelativeLayout>
     </LinearLayout>
+
 </RelativeLayout>
