--- a/app/src/main/res/layout/home_team_player_row.xml
+++ b/app/src/main/res/layout/home_team_player_row.xml
@@ -21,9 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="72dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif"
-        android:textColor="#000"
-        android:textSize="16sp" />
+        android:fontFamily="@string/roboto_regular"
+        android:textColor="@color/dark"
+        android:textSize="@dimen/material_text_subhead"  />
 
     <LinearLayout
         android:id="@+id/player_data_linear_layout"
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="72dp"
                 android:text="@string/birthday"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -50,6 +51,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -59,6 +61,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/player_hint_year_tv"
                 android:layout_toRightOf="@+id/player_hint_year_tv"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
         </RelativeLayout>
     </LinearLayout>
@@ -79,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nationality"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -88,6 +92,7 @@
                 android:layout_toEndOf="@+id/player_nationality_hint_tv"
                 android:layout_toRightOf="@+id/player_nationality_hint_tv"
                 android:maxLength="11"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
 
             <TextView
@@ -97,9 +102,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:maxLength="11"
+                android:fontFamily="@string/roboto_regular"
                 android:textSize="14sp" />
-
-
         </RelativeLayout>
     </LinearLayout>
 
