--- a/app/src/main/res/layout/league_list_row.xml
+++ b/app/src/main/res/layout/league_list_row.xml
@@ -18,8 +18,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:textColor="#000"
-        android:textSize="16sp" />
+        android:fontFamily="@string/roboto_regular"
+        android:textColor="@color/dark"
+        android:textSize="@dimen/material_text_subhead" />
 
     <TextView
         android:id="@+id/teams_of_league_hint_tv"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:fontFamily="@string/roboto_regular"
         android:layout_alignParentStart="true"
         android:text="@string/teams_of_league"
         android:textSize="14sp" />
@@ -36,6 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:layout_marginLeft="5dp"
+        android:fontFamily="@string/roboto_regular"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/teams_of_league_hint_tv"
         android:layout_toEndOf="@+id/teams_of_league_hint_tv" />
@@ -44,6 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/caption_tv"
+        android:fontFamily="@string/roboto_regular"
+        android:textSize="14sp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
     <TextView
@@ -51,6 +57,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:fontFamily="@string/roboto_regular"
+        android:textSize="14sp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
