--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -1,128 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/cv_margin_b"
+        android:layout_marginLeft="@dimen/cv_margin_l"
+        android:layout_marginRight="@dimen/cv_margin_r"
+        android:layout_marginTop="@dimen/cv_margin_t"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="@dimen/card_radius">
 
-        <android.support.v7.widget.CardView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/cv_margin_b"
-            android:layout_marginLeft="@dimen/cv_margin_l"
-            android:layout_marginRight="@dimen/cv_margin_r"
-            android:layout_marginTop="@dimen/cv_margin_t">
+            android:background="?attr/selectableItemBackground"
+            android:padding="@dimen/margin_16dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/first_team_logo_iv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true" />
+
+            <ImageView
+                android:id="@+id/second_team_logo_iv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true" />
+
+            <TextView
+                android:id="@+id/home_team_name_tv"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:orientation="vertical">
+                android:layout_alignBaseline="@+id/away_team_name_tv"
+                android:layout_alignBottom="@+id/away_team_name_tv"
+                android:layout_toEndOf="@+id/first_team_logo_iv"
+                android:layout_toRightOf="@+id/first_team_logo_iv"
+                android:fontFamily="@string/roboto_regular"
+                android:maxLength="8"
+                android:paddingLeft="5dp"
+                android:textColor="@color/dark"
+                android:textSize="@dimen/material_text_subhead" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="?attr/selectableItemBackground"
-                    android:padding="@dimen/margin_16dp">
+            <TextView
+                android:id="@+id/away_team_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/second_team_logo_iv"
+                android:layout_marginBottom="14dp"
+                android:layout_toLeftOf="@+id/second_team_logo_iv"
+                android:layout_toStartOf="@+id/second_team_logo_iv"
+                android:fontFamily="@string/roboto_regular"
+                android:maxLength="8"
+                android:paddingRight="5dp"
+                android:textColor="@color/dark"
+                android:textSize="@dimen/material_text_subhead" />
 
-                    <ImageView
-                        android:id="@+id/first_team_logo_iv"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true" />
-
-                    <ImageView
-                        android:id="@+id/second_team_logo_iv"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true" />
-
-                    <TextView
-                        android:id="@+id/home_team_name_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/away_team_name_tv"
-                        android:layout_alignBottom="@+id/away_team_name_tv"
-                        android:layout_toEndOf="@+id/first_team_logo_iv"
-                        android:layout_toRightOf="@+id/first_team_logo_iv"
-                        android:maxLength="8"
-                        android:paddingLeft="5dp"
-                        android:textColor="@color/dark"
-                        android:textSize="@dimen/material_text_subhead" />
-
-                    <TextView
-                        android:id="@+id/away_team_name_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/second_team_logo_iv"
-                        android:layout_marginBottom="14dp"
-                        android:layout_toLeftOf="@+id/second_team_logo_iv"
-                        android:layout_toStartOf="@+id/second_team_logo_iv"
-                        android:maxLength="8"
-                        android:paddingRight="5dp"
-                        android:textColor="@color/dark"
-                        android:textSize="@dimen/material_text_subhead" />
-
-                    <TextView
-                        android:id="@+id/score_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/home_team_name_tv"
-                        android:layout_centerHorizontal="true"
-                        android:maxLength="10"
-                        android:text=" - "
-                        android:textColor="@color/dark"
-                        android:textSize="@dimen/material_text_subhead" />
-                </RelativeLayout>
+            <TextView
+                android:id="@+id/score_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/home_team_name_tv"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@string/roboto_regular"
+                android:maxLength="10"
+                android:text=" - "
+                android:textColor="@color/dark"
+                android:textSize="@dimen/material_text_subhead" />
 
 
-                <RelativeLayout
-                    android:id="@+id/match_description_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="?attr/selectableItemBackground"
-                    android:paddingBottom="@dimen/margin_16dp"
-                    android:paddingLeft="@dimen/margin_16dp"
-                    android:paddingRight="@dimen/margin_16dp">
+            <TextView
+                android:id="@+id/match_time_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/match_status_tv"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@string/roboto_regular"
+                android:paddingTop="@dimen/padding_10dp"
+                android:textSize="@dimen/material_text_button"
+                android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/match_time_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:textSize="@dimen/material_text_button"
-                        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/match_status_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/away_team_name_tv"
+                android:fontFamily="@string/roboto_regular"
+                android:maxLength="10"
+                android:paddingTop="@dimen/padding_10dp"
+                android:textSize="@dimen/material_text_button" />
 
-                    <TextView
-                        android:id="@+id/match_status_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
-                        android:maxLength="10"
-                        android:textSize="@dimen/material_text_button" />
-
-                    <TextView
-                        android:id="@+id/match_date_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:fontFamily="sans-serif"
-                        android:textSize="@dimen/material_text_button" />
-                </RelativeLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/match_date_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/first_team_logo_iv"
+                android:fontFamily="@string/roboto_regular"
+                android:paddingTop="@dimen/padding_10dp"
+                android:textSize="@dimen/material_text_button" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </android.support.design.widget.CoordinatorLayout>
