--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-
+    <dimen name="padding_10dp">10dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
 
@@ -81,4 +81,5 @@
     <dimen name="arrow_padding_r">16dp</dimen>
     <dimen name="team_logo_w">70dp</dimen>
     <dimen name="team_logo_h">70dp</dimen>
+    <dimen name="card_radius">2dp</dimen>
 </resources>
